# ChangeLog for sys-devel/crossdev
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/crossdev/ChangeLog,v 1.60 2008/10/27 05:57:43 vapier Exp $

*crossdev-0.9.18-r10 (27 Oct 2008)

  27 Oct 2008; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  +crossdev-0.9.18-r10.ebuild:
  Push out misc minor fixes and make sure we emerge gcc stage2 with --newuse
  #235551.

*crossdev-0.9.18-r9 (23 Jun 2008)

  23 Jun 2008; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  +crossdev-0.9.18-r9.ebuild:
  Build with --with-headers by default as gcc-4.3 relies on them a lot more
  #227065.

*crossdev-0.9.18-r8 (16 May 2008)

  16 May 2008; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  +crossdev-0.9.18-r8.ebuild:
  Disable openmp and libffi when building gcc stage1 #222227 by Donnie Berkholz.

*crossdev-0.9.18-r7 (05 Feb 2008)

  05 Feb 2008; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  +crossdev-0.9.18-r7.ebuild:
  Do not use mips-headers anymore for mips-targets.

*crossdev-0.9.18-r6 (30 Dec 2007)

  30 Dec 2007; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  +crossdev-0.9.18-r6.ebuild:
  If a target w/out a libc is selected, then error out while attempting a step
  that requires a libc.

*crossdev-0.9.18-r5 (04 Nov 2007)

  04 Nov 2007; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  files/crossdev-stable, +crossdev-0.9.18-r5.ebuild:
  Stop using -* now that we have ** and the meaning of -* is changing.

*crossdev-0.9.18-r4 (06 Oct 2007)

  06 Oct 2007; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  +crossdev-0.9.18-r4.ebuild:
  Fix from Andrew Gaffney to tee output from emerge when using just --pretend
  #188812.

*crossdev-0.9.18-r3 (29 Jul 2007)

  29 Jul 2007; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  +crossdev-0.9.18-r3.ebuild:
  Make default keywords use the target rather than target+host.

*crossdev-0.9.18-r2 (09 Jun 2007)
