@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/crossdev
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/crossdev/ChangeLog,v 1.60 2008/10/27 05:57:43 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/crossdev/ChangeLog,v 1.61 2008/11/28 09:21:10 vapier Exp $
+
+*crossdev-0.9.19 (28 Nov 2008)
+
+  28 Nov 2008; Mike Frysinger <vapier@gentoo.org> files/crossdev,
+  +crossdev-0.9.19.ebuild:
+  Initial cygwin support.
 
 *crossdev-0.9.18-r10 (27 Oct 2008)
 
